--- a/4 Inference and Modeling/Inference and Modeling Notes.Rmd
+++ b/4 Inference and Modeling/Inference and Modeling Notes.Rmd
@@ -2285,10 +2285,146 @@ Add two columns to the `cis` table by computing, for each poll, the difference b
 head(cis)
 
 # Create an object called `errors` that calculates the difference between the predicted and actual spread and indicates if the correct winner was predicted
+errors <- cis %>% 
+  mutate(error = spread - actual_spread, 
+  hit = sign(spread) == sign(actual_spread)
+  )
 
 
 # Examine the last 6 rows of `errors`
+tail(errors)
 ```
+
+## Exercise 7 - Plotting Prediction Results
+
+Create an object called `p_hits` that contains the proportion of instances when the sign of the actual spread matches the predicted spread for states with 5 or more polls.
+
+Make a barplot based on the result from the previous exercise that shows the proportion of times the sign of the spread matched the actual result for the data in `p_hits`.
+
+-   Use the `group_by` function to group the data by state.
+
+-   Use the `filter` function to filter for states that have 5 or more polls.
+
+-   Summarize the proportion of values in `hit` that are true as a variable called `proportion_hits`. Also create a variable called `n` for the number of polls in each state using the `n()` function.
+
+-   To make the plot, follow these steps:
+
+-   Reorder the states in order of the proportion of hits.
+
+-   Using `ggplot`, set the aesthetic with state as the x-variable and proportion of hits as the y-variable.
+
+-   Use `geom_bar` to indicate that we want to plot a barplot.
+
+-   Use `coord_flip` to flip the axes so the states are displayed from top to bottom and proportions are displayed from left to right.
+
+```{r}
+# Create an object called `errors` that calculates the difference between the predicted and actual spread and indicates if the correct winner was predicted
+errors <- cis %>% mutate(error = spread - actual_spread, hit = sign(spread) == sign(actual_spread))
+
+# Create an object called `p_hits` that summarizes the proportion of hits for each state that has 5 or more polls
+p_hits <- errors %>% group_by(state) %>% filter(n() >= 5) %>% summarize(proportion_hits = mean(hit), n = n())
+p_hits
+
+
+
+# Make a barplot of the proportion of hits for each state
+p_hits %>% ggplot(aes(reorder(state, proportion_hits))) +
+geom_bar() +
+coord_flip()
+```
+
+## Exercise 8 - Plotting the Errors
+
+In the previous graph, we see that most states' polls predicted the correct winner 100% of the time. Only a few states polls' were incorrect more than 25% of the time. Wisconsin got every single poll wrong. In Pennsylvania and Michigan, more than 90% of the polls had the signs wrong.
+
+Make a histogram of the errors. What is the median of these errors?
+
+-   Use the `hist` function to generate a histogram of the errors
+
+-   Use the `median` function to compute the median error
+
+```{r}
+# The `errors` data have already been loaded. Examine them using the `head` function.
+head(errors)
+
+# Generate a histogram of the error
+hist(errors$error)
+
+# Calculate the median of the errors. Print this value to the console.
+median(errors$error)
+```
+
+## Exercise 9- Plot Bias by State 
+
+We see that, at the state level, the median error was slightly in favor of Clinton. The distribution is not centered at 0, but at 0.037. This value represents the general bias we described in an earlier section.
+
+Create a boxplot to examine if the bias was general to all states or if it affected some states differently. Filter the data to include only pollsters with grades B+ or higher.
+
+-   Use the `filter` function to filter the data for polls with grades equal to A+, A, A-, or B+.
+
+-   Use the `reorder` function to order the state data by error.
+
+-   Using `ggplot`, set the aesthetic with state as the x-variable and error as the y-variable.
+
+-   Use `geom_boxplot` to indicate that we want to plot a boxplot.
+
+-   Use `geom_point` to add data points as a layer.
+
+```{r}
+# The `errors` data have already been loaded. Examine them using the `head` function.
+head(errors)
+
+# Create a boxplot showing the errors by state for polls with grades B+ or 
+errors %>% filter(grade %in% c("A+", "A", "A-", "B+")) %>%
+  mutate(state = reorder(state, error)) %>%
+  ggplot(aes(state, error)) +
+  geom_boxplot() +
+  geom_point()
+```
+
+## Exercise 10 - Filter Error Plot
+
+Some of these states only have a few polls. Repeat the previous exercise to plot the errors for each state, but only include states with five good polls or more.
+
+-   Use the `filter` function to filter the data for polls with grades equal to A+, A, A-, or B+.
+
+-   Group the filtered data by state using `group_by`.
+
+-   Use the `filter` function to filter the data for states with at least 5 polls. Then, use `ungroup` so that polls are no longer grouped by state.
+
+-   Use the `reorder` function to order the state data by error.
+
+-   Using `ggplot`, set the aesthetic with state as the x-variable and error as the y-variable.
+
+-   Use `geom_boxplot` to indicate that we want to plot a boxplot.
+
+-   Use `geom_point` to add data points as a layer.
+
+```{r}
+# The `errors` data have already been loaded. Examine them using the `head` function.
+head(errors)
+
+# Create a boxplot showing the errors by state for states with at least 5 polls with grades B+ or higher
+errors %>% filter(grade %in% c("A+", "A", "A-", "B+")) %>%
+  group_by(state) %>% 
+  filter(n() >= 5) %>%
+  ungroup(state) %>% 
+  mutate(state = reorder(state, error)) %>%
+  ggplot(aes(state, error)) +
+  geom_boxplot() + 
+  geom_point()
+```
+
+![](images/Untitled.png)
+
+You see that the West (Washington, New Mexico, California)
+underestimated Hillary's performance, while the Midwest (Michigan,
+Pennsylvania, Wisconsin, Ohio, Missouri) overestimated it. In our
+simulation in we did not model this behavior since we added general
+bias, rather than a regional bias. Some pollsters are now modeling
+correlation between similar states and estimating this correlation from
+historical data. To learn more about this, you can learn about random
+effects and mixed models.
 
 ## The t-Distribution
 
@@ -2308,3 +2444,360 @@ qnorm(0.975)
 ```
 
 # Assessment 6.2: The t-Distribution
+
+## Exercise 1 - Using the t-Distribution
+
+We know that, with a normal distribution, only 5% of values are more than 2 standard deviations away from the mean.
+
+Calculate the probability of seeing t-distributed random variables being more than 2 in absolute value when the degrees of freedom are 3.
+
+-   Use the `pt` function to calculate the probability of seeing a value less than or equal to the argument. Your output should be a single value.
+
+```{r}
+# Calculate the probability of seeing t-distributed random variables being more than 2 in absolute value when 'df = 3'.
+(1-pt(2,3))*2
+```
+
+## Exercise 2 - Plotting the t-distribution
+
+Now use `sapply` to compute the same probability for degrees of freedom from 3 to 50.
+
+Make a plot and notice when this probability converges to the normal distribution's 5%.
+
+-   Make a vector called `df` that contains a sequence of numbers from 3 to 50.
+
+-   Using `function`, make a function called `pt_func` that recreates the calculation for the probability that a value is greater than 2 as an absolute value for any given degrees of freedom.
+
+-   Use `sapply` to apply the `pt_func` function across all values contained in `df`. Call these probabilities `probs`.
+
+-   Use the `plot` function to plot `df` on the x-axis and `probs` on the y-axis.
+
+```{r}
+# Generate a vector 'df' that contains a sequence of numbers from 3 to 50
+df <- seq(3,50,1)
+df
+
+# Make a function called 'pt_func' that calculates the probability that a value is more than |2| for any degrees of freedom 
+pt_func <- function(x){
+    (1-pt(2,x))*2
+}
+
+# Generate a vector 'probs' that uses the `pt_func` function to calculate the probabilities
+probs <- sapply(df, pt_func)
+
+# Plot 'df' on the x-axis and 'probs' on the y-axis
+plot(df, probs)
+```
+
+## Exercise 3 - Sampling From the Normal Distribution
+
+![](images/clipboard-389210938.png)
+
+-   Use the `replicate` function to carry out the simulation. Specify the number of times you want the code to run and, within brackets, the three lines of code that should run.
+
+-   First use the `sample` function to randomly sample `N` values from `x`.
+
+-   Second, create a vector called `interval` that calculates the 95% confidence interval for the sample. You will use the `qnorm` function.
+
+-   Third, use the `between` function to determine if the population mean `mu` is contained between the confidence intervals.
+
+-   Save the results of the Monte Carlo function to a vector called `res`.
+
+-   Use the `mean` function to determine the proportion of hits in `res`.
+
+```{r}
+# Load the neccessary libraries and data
+library(dslabs)
+library(dplyr)
+data(heights)
+
+# Use the sample code to generate 'x', a vector of male heights
+x <- heights %>% filter(sex == "Male") %>%
+  .$height
+
+# Create variables for the mean height 'mu', the sample size 'N', and the number of times the simulation should run 'B'
+mu <- mean(x)
+N <- 15
+B <- 10000
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# Generate a logical vector 'res' that contains the results of the simulations
+res <- replicate(B, {
+  sim <- sample(x, N, replace = TRUE)
+  X_hat <- mean(sim)
+  se_hat <- sd(sim)/sqrt(N)
+  interval <- c(X_hat - qnorm(0.975) * se_hat, X_hat + qnorm(0.975) * se_hat)
+  between(mu, interval[1], interval[2])
+})
+
+# Calculate the proportion of times the simulation produced values within the 95% confidence interval. Print this value to the console.
+mean(res)
+```
+
+## Exercise 4 - Sampling from the t-Distribution
+
+![](images/clipboard-3735008413.png)
+
+-   Use the `replicate` function to carry out the simulation. Specify the number of times you want the code to run and, within brackets, the three lines of code that should run.
+
+-   First use the `sample` function to randomly sample `N` values from `x`.
+
+-   Second, create a vector called `interval` that calculates the 95% confidence interval for the sample. Remember to use the `qt` function this time to generate the confidence interval.
+
+-   Third, use the `between` function to determine if the population mean `mu` is contained between the confidence intervals.
+
+-   Save the results of the Monte Carlo function to a vector called `res`.
+
+-   Use the `mean` function to determine the proportion of hits in `res`.
+
+```{r}
+# The vector of filtered heights 'x' has already been loaded for you. Calculate the mean.
+mu <- mean(x)
+
+# Use the same sampling parameters as in the previous exercise.
+set.seed(1)
+N <- 15
+B <- 10000
+
+# Generate a logical vector 'res' that contains the results of the simulations using the t-distribution
+res <- replicate(B, {
+  sim <- sample(x, N, replace = TRUE)
+  X_hat <- mean(sim)
+  se_hat <- sd(sim)/sqrt(N)
+  interval <- c(X_hat - qt(0.975,N-1) * se_hat, X_hat + qt(0.975, N-1) * se_hat)
+  between(mu, interval[1], interval[2])
+})
+
+# Calculate the proportion of times the simulation produced values within the 95% confidence interval. Print this value to the console.
+mean(res)
+```
+
+## Exercise 5 - Why the t-Distribution?
+
+Why did the t-distribution confidence intervals work so much better?
+
+![](images/clipboard-525756482.png)Remember that we saw previously that the t-distribution performs
+similarly to the normal distribution when sample sizes 30 or larger.
+
+# Section 7 Overview
+
+In Section 7, you will learn how to use association and chi-squared tests to perform inference for binary, categorical, and ordinal data through an example looking at research funding rates.
+
+After completing Section 7, you will be able to:
+
+-    Use association and chi-squared tests to perform inference on binary, categorical, and ordinal data.
+
+-   Calculate an odds ratio to get an idea of the magnitude of an observed effect.
+
+### Association Tests 
+
+-   We learn how to determine the probability that an observation is due to random variability given categorical, binary or ordinal data.
+
+-   Fisher's exact test determines the p-value as the probability of observing an outcome as extreme or more extreme than the observed outcome given the null distribution.
+
+-   Data from a binary experiment are often summarized in *two-by-two tables*.
+
+-   The p-value can be calculated from a two-by-two table using Fisher's exact test with the function `fisher.test()`.
+
+#### Code: Research funding rates example
+
+```{r}
+# load and inspect research funding rates object
+library(tidyverse)
+library(dslabs)
+data(research_funding_rates)
+research_funding_rates
+
+# compute totals that were successful or not successful
+totals <- research_funding_rates %>%
+    select(-discipline) %>%
+    summarize_all(funs(sum)) %>%
+    summarize(yes_men = awards_men,
+                         no_men = applications_men - awards_men,
+                         yes_women = awards_women,
+                         no_women = applications_women - awards_women)
+
+# compare percentage of men/women with awards
+totals %>% summarize(percent_men = yes_men/(yes_men + no_men),
+                                          percent_women = yes_women/(yes_women + no_women))
+```
+
+#### Code: Two-by-two table and p-value for the Lady Tasting Tea problem
+
+```{r}
+tab <- matrix(c(3,1,1,3), 2, 2)
+rownames(tab) <- c("Poured Before", "Poured After")
+colnames(tab) <- c("Guessed Before", "Guessed After")
+tab
+
+# p-value calculation with Fisher's Exact Test
+fisher.test(tab, alternative = "greater")
+```
+
+### Chi-Squared Tests 
+
+-   If the sums of the rows and the sums of the columns in the two-by-two table are fixed, then the hypergeometric distribution and  Fisher's exact test can be used. Otherwise, we must use the chi-squared test.
+
+-   The *chi-squared test* compares the observed two-by-two table to the two-by-two table expected by the null hypothesis and asks how likely it is that we see a deviation as large as observed or larger by chance.
+
+-   The function `chisq.test()` takes a two-by-two table and returns the p-value from the chi-squared test.
+
+-   The *odds ratio* states how many times larger the odds of an outcome are for one group relative to another group.
+
+-   A small p-value does not imply a large odds ratio. If a finding has a small p-value but also a small odds ratio, it may not be a practically significant or scientifically significant finding. 
+
+-   Because the odds ratio is a ratio of ratios, there is no simple way to use the Central Limit Theorem to compute confidence intervals. There are advanced methods for computing confidence intervals for odds ratios that we do not discuss here.
+
+#### Code: Chi-squared test
+
+```{r}
+# compute overall funding rate
+funding_rate <- totals %>%
+    summarize(percent_total = (yes_men + yes_women) / (yes_men + no_men + yes_women + no_women)) %>%
+    .$percent_total
+funding_rate
+
+# construct two-by-two table for observed data
+two_by_two <- tibble(awarded = c("no", "yes"),
+                    men = c(totals$no_men, totals$yes_men),
+                     women = c(totals$no_women, totals$yes_women))
+two_by_two
+
+# compute null hypothesis two-by-two table
+tibble(awarded = c("no", "yes"),
+           men = (totals$no_men + totals$yes_men) * c(1-funding_rate, funding_rate),
+           women = (totals$no_women + totals$yes_women) * c(1-funding_rate, funding_rate))
+
+# chi-squared test
+chisq_test <- two_by_two %>%
+    select(-awarded) %>%
+    chisq.test()
+chisq_test$p.value
+```
+
+#### Code: Odds ratio
+
+```{r}
+# odds of getting funding for men
+odds_men <- 
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{# odds of getting funding for women}
+odds_women <- (two_by_two$women[2] / sum(two_by_two$women)) /
+        (two_by_two$women[1] / sum(two_by_two$women))
+
+# odds ratio - how many times larger odds are for men than women
+odds_men/odds_women
+```
+
+#### Code: p-value and odds ratio responses to increasing sample size
+
+```{r}
+# multiplying all observations by 10 decreases p-value without changing odds ratio
+two_by_two %>%
+  select(-awarded) %>%
+  mutate(men = men*10, women = women*10) %>%
+  chisq.test()
+```
+
+# Assessment 7.1: Association and Chi-Squared Tests
+
+## Exercise 1 - Comparing Proportions of Hits
+
+In a previous exercise, we determined whether or not each poll predicted the correct winner for their state in the 2016 U.S. presidential election. Each poll was also assigned a grade by the poll aggregator. Now we're going to determine if polls rated A- made better predictions than polls rated C-.
+
+In this exercise, filter the errors data for just polls with grades A- and C-. Calculate the proportion of times each grade of poll predicted the correct winner.
+
+-   Filter `errors` for grades A- and C-.
+
+-   Group the data by grade and hit.
+
+-   Summarize the number of hits for each grade.
+
+-   Generate a two-by-two table containing the number of hits and misses for each grade. Try using the `spread` function to generate this table.
+
+-   Calculate the proportion of times each grade was correct.
+
+```{r}
+# The 'errors' data have already been loaded. Examine them using the `head` function.
+head(errors)
+
+# Generate an object called 'totals' that contains the numbers of good and bad predictions for polls rated A- and C-
+totals <- errors %>% filter(grade %in% c("A-", "C-")) %>% group_by(grade, hit) %>% summarize(hits = n()) %>% spread(grade, hits)
+totals
+
+# Print the proportion of hits for grade A- polls to the console
+totals$"A-"[2]/sum(totals$"A-")
+
+
+# Print the proportion of hits for grade C- polls to the console
+totals$"C-"[2]/sum(totals$"C-")
+```
+
+## Exercise 2 - Chi-squared Test
+
+We found that the A- polls predicted the correct winner about 80% of the time in their states and C- polls predicted the correct winner about 86% of the time.
+
+Use a chi-squared test to determine if these proportions are different.
+
+-   Use the `chisq.test` function to perform the chi-squared test. Save the results to an object called `chisq_test`.
+
+-   Print the p-value of the test to the console.
+
+```{r}
+# The 'totals' data have already been loaded. Examine them using the `head` function.
+head(totals)
+
+# Perform a chi-squared test on the hit data. Save the results as an object called 'chisq_test'.
+chisq_test <- totals %>% select(!hit) %>% chisq.test()
+
+# Print the p-value of the chi-squared test to the console
+chisq_test$p.value
+```
+
+-   If you include the 'hit' column in the chi-squared test, the test will consider the association between all variables, including 'hit'. If excluding the 'hit' column results in a different p-value, it suggests that the 'hit' variable is influential in the association analyzed by the chi-squared test.
+
+-   If you exclude the 'hit' column, the test is conducted on the remaining variables, and the p-value reflects the association between those variables without considering 'hit'. This could lead to a different result because you are essentially testing a different hypothesis.
+
+## Exercise 3 - Odds Ratio Calculation
+
+It doesn't look like the grade A- polls performed significantly differently than the grade C- polls in their states.
+
+Calculate the odds ratio to determine the magnitude of the difference in performance between these two grades of polls.
+
+-   Calculate the odds that a grade C- poll predicts the correct winner. Save this result to a variable called `odds_C`.
+
+-   Calculate the odds that a grade A- poll predicts the correct winner. Save this result to a variable called `odds_A`.
+
+-   Calculate the odds ratio that tells us how many times larger the odds of a grade A- poll is at predicting the winner than a grade C- poll.
+
+```{r}
+# The 'totals' data have already been loaded. Examine them using the `head` function.
+head(totals)
+totals
+
+# Generate a variable called `odds_C` that contains the odds of getting the prediction right for grade C- polls
+odds_C <- (totals$"C-"[2] / sum(totals$"C-")) /
+        (totals$"C-"[1] / sum(totals$"C-"))
+odds_C
+
+
+# Generate a variable called `odds_A` that contains the odds of getting the prediction right for grade A- polls
+odds_A <- (totals$"A-"[2] / sum(totals$"A-")) /
+        (totals$"A-"[1] / sum(totals$"A-"))
+odds_A
+
+
+# Calculate the odds ratio to determine how many times larger the odds ratio is for grade A- polls than grade C- polls
+odds_A/odds_C
+```
